Add upgrade notes to 'RELEASE-NOTES.md'